{
    "name": "AllControls",
    "maps": [
        {
            "name": "Player",
            "id": "c3a302d4-348b-4f13-80fa-020a44c14add",
            "actions": [
                {
                    "name": "Move",
                    "type": "Value",
                    "id": "2d752020-2a02-440a-973c-a1f723ccb13d",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "Look",
                    "type": "Value",
                    "id": "07b8b798-0b94-4ad5-a594-26146c475ee3",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "Run",
                    "type": "Button",
                    "id": "68689537-5670-43f0-b4aa-3d2d2b3061d0",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "Jump",
                    "type": "Button",
                    "id": "75b8cf44-5863-46ba-834c-4db411a11360",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "9779e288-0520-4fc1-bd6c-0f0366eda668",
                    "path": "<XInputController>/leftStick",
                    "interactions": "",
                    "processors": "StickDeadzone",
                    "groups": "XboxController",
                    "action": "Move",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "WASD",
                    "id": "998e2844-9493-4889-b1be-f4ec72570bd3",
                    "path": "2DVector(mode=1)",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Move",
                    "isComposite": true,
                    "isPartOfComposite": false
                },
                {
                    "name": "up",
                    "id": "1802f8a9-eed2-4e2b-a724-c64b30e6047d",
                    "path": "<Keyboard>/w",
                    "interactions": "",
                    "processors": "",
                    "groups": "Keyboard&Mouse",
                    "action": "Move",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "down",
                    "id": "094d71cf-0f04-4129-b6a0-6016b86c2b56",
                    "path": "<Keyboard>/s",
                    "interactions": "",
                    "processors": "",
                    "groups": "Keyboard&Mouse",
                    "action": "Move",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "left",
                    "id": "5df1212f-9fc5-4645-8404-5f2e39c2bef4",
                    "path": "<Keyboard>/a",
                    "interactions": "",
                    "processors": "",
                    "groups": "Keyboard&Mouse",
                    "action": "Move",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "right",
                    "id": "769eceb5-816a-4d6d-ab20-b92390163bb7",
                    "path": "<Keyboard>/d",
                    "interactions": "",
                    "processors": "",
                    "groups": "Keyboard&Mouse",
                    "action": "Move",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "",
                    "id": "b5d13e46-d911-43e9-8928-356447b8866b",
                    "path": "<Gamepad>/rightStick",
                    "interactions": "",
                    "processors": "StickDeadzone,ScaleVector2(x=300,y=300)",
                    "groups": "XboxController",
                    "action": "Look",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "ed986b4a-4681-4224-acc7-06142e732b43",
                    "path": "<Mouse>/delta",
                    "interactions": "",
                    "processors": "ScaleVector2(x=15,y=15)",
                    "groups": "Keyboard&Mouse",
                    "action": "Look",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "4c1f03e8-f96b-4d0c-ae25-cb96b53c1514",
                    "path": "<XInputController>/leftStickPress",
                    "interactions": "",
                    "processors": "",
                    "groups": "XboxController",
                    "action": "Run",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "5fbc95b8-1837-4162-af3f-ceec7bcdadee",
                    "path": "<Keyboard>/leftShift",
                    "interactions": "",
                    "processors": "",
                    "groups": "Keyboard&Mouse",
                    "action": "Run",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "ce8ecc74-193e-4d54-8f25-62d4463154ac",
                    "path": "<XInputController>/buttonSouth",
                    "interactions": "",
                    "processors": "",
                    "groups": "XboxController",
                    "action": "Jump",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "62926882-cd17-43b7-b92b-2546cdda606e",
                    "path": "<Keyboard>/space",
                    "interactions": "",
                    "processors": "",
                    "groups": "Keyboard&Mouse",
                    "action": "Jump",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        },
        {
            "name": "AirBending",
            "id": "e643b4d4-1d6b-4683-a897-cdcc408e186a",
            "actions": [
                {
                    "name": "HighJump",
                    "type": "Button",
                    "id": "9bda60c7-4cde-4a65-a477-3e42d78557a9",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "Hold(duration=1,pressPoint=0.5)"
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "0ba4dd92-2ac1-46fd-b496-8a804d3638cc",
                    "path": "<Keyboard>/space",
                    "interactions": "",
                    "processors": "",
                    "groups": "Keyboard&Mouse",
                    "action": "HighJump",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "a184ba67-44dc-429e-add0-2fc052f407cb",
                    "path": "<XInputController>/buttonSouth",
                    "interactions": "",
                    "processors": "",
                    "groups": "Keyboard&Mouse",
                    "action": "HighJump",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        },
        {
            "name": "WaterBending",
            "id": "1aa619c8-5c4b-4485-b334-3e76ce731642",
            "actions": [
                {
                    "name": "IceCube",
                    "type": "Button",
                    "id": "d3dedc16-d72b-4e50-b044-8319c623438e",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "FreezeWater",
                    "type": "Button",
                    "id": "018e240b-1803-436f-b55f-c38fd8b6b7f6",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                }
            ],
            "bindings": [
                {
                    "name": "Button With One Modifier",
                    "id": "459091fa-fc8a-40a0-aebd-b338026fd722",
                    "path": "ButtonWithOneModifier",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "IceCube",
                    "isComposite": true,
                    "isPartOfComposite": false
                },
                {
                    "name": "modifier",
                    "id": "eb554df2-34d0-4492-ad70-893a88d660e2",
                    "path": "<Keyboard>/e",
                    "interactions": "",
                    "processors": "",
                    "groups": "Keyboard&Mouse",
                    "action": "IceCube",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "button",
                    "id": "d196fdc4-501d-4db2-9036-ece867dfc1f3",
                    "path": "<Mouse>/leftButton",
                    "interactions": "",
                    "processors": "",
                    "groups": "Keyboard&Mouse",
                    "action": "IceCube",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "",
                    "id": "1a827a49-8349-4353-a17c-fc713bf3ae20",
                    "path": "<Keyboard>/e",
                    "interactions": "",
                    "processors": "",
                    "groups": "Keyboard&Mouse",
                    "action": "FreezeWater",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        },
        {
            "name": "EarthBending",
            "id": "045eb542-b7e3-4df7-90a5-a9d023d3521a",
            "actions": [
                {
                    "name": "SeismicSense",
                    "type": "Button",
                    "id": "0b9ff865-a0f1-4e04-934d-b1e433f77be2",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "OpenWall",
                    "type": "Button",
                    "id": "ac65061c-37b9-4f04-8aae-d7677d19f926",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "202bd3a3-1d2f-4c39-8353-2dbee34e47e5",
                    "path": "<XInputController>/rightStickPress",
                    "interactions": "",
                    "processors": "",
                    "groups": "XboxController",
                    "action": "SeismicSense",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "030067f0-a048-456e-9365-bc186786c74d",
                    "path": "<Keyboard>/v",
                    "interactions": "",
                    "processors": "",
                    "groups": "Keyboard&Mouse",
                    "action": "SeismicSense",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "b4ba4ded-e27a-4458-a07a-5bcbb0a4534e",
                    "path": "<Keyboard>/e",
                    "interactions": "",
                    "processors": "",
                    "groups": "Keyboard&Mouse",
                    "action": "OpenWall",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        },
        {
            "name": "FireBending",
            "id": "d21a1cbf-b5ad-4d5e-a125-2f9c7685dcf2",
            "actions": [
                {
                    "name": "FireTorch",
                    "type": "Button",
                    "id": "1290060d-d38b-4bfb-bbed-25d2113e4585",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "714572d7-f5aa-4b0f-bf5d-9222bfefe574",
                    "path": "<XInputController>/buttonEast",
                    "interactions": "",
                    "processors": "",
                    "groups": "XboxController",
                    "action": "FireTorch",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "b6638743-cc28-4608-aeac-2fb155e8a82b",
                    "path": "<Keyboard>/f",
                    "interactions": "",
                    "processors": "",
                    "groups": "Keyboard&Mouse",
                    "action": "FireTorch",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        },
        {
            "name": "ControlHints",
            "id": "249f4619-6afb-4d89-92e0-921c57575c21",
            "actions": [
                {
                    "name": "CheckKM",
                    "type": "Value",
                    "id": "a2e85fd8-aac5-4168-aae8-29ddfb55f085",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "CheckXC",
                    "type": "Value",
                    "id": "c7a6cbde-4aa0-4c19-91f2-3c7a4ff90ab8",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": ""
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "7d27590c-ee72-46c3-a95a-ae44b42a53c1",
                    "path": "<Keyboard>/anyKey",
                    "interactions": "",
                    "processors": "",
                    "groups": "Keyboard&Mouse",
                    "action": "CheckKM",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "f9b6ad0c-34d3-441f-a0b5-469bfb23084a",
                    "path": "<Mouse>/delta",
                    "interactions": "",
                    "processors": "",
                    "groups": "Keyboard&Mouse",
                    "action": "CheckKM",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "e3ca0083-c296-46c8-bf17-75185a23e5a9",
                    "path": "<XInputController>/button*",
                    "interactions": "",
                    "processors": "",
                    "groups": "Controller",
                    "action": "CheckXC",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "a13706f1-7d35-4ade-a7ed-733485be5710",
                    "path": "<XInputController>/start",
                    "interactions": "",
                    "processors": "",
                    "groups": "Controller",
                    "action": "CheckXC",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "05f4055e-b20a-4e7e-a8a8-1144ae3f557f",
                    "path": "<XInputController>/select",
                    "interactions": "",
                    "processors": "",
                    "groups": "Controller",
                    "action": "CheckXC",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "178d7303-3cd1-47c2-aa0c-9532220b5a98",
                    "path": "<XInputController>/dpad",
                    "interactions": "",
                    "processors": "",
                    "groups": "Controller",
                    "action": "CheckXC",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "350ab58b-559f-4d91-9936-5c8d9bc7bcb6",
                    "path": "<XInputController>/leftShoulder",
                    "interactions": "",
                    "processors": "",
                    "groups": "Controller",
                    "action": "CheckXC",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "c87c7a97-860a-457e-ad43-c171b744659e",
                    "path": "<XInputController>/rightShoulder",
                    "interactions": "",
                    "processors": "",
                    "groups": "Controller",
                    "action": "CheckXC",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "06a0ce8a-1571-4927-bcd4-87167d0c5d58",
                    "path": "<XInputController>/leftTrigger",
                    "interactions": "",
                    "processors": "",
                    "groups": "Controller",
                    "action": "CheckXC",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "21a4b3ad-5644-4956-8a4a-2c4f9d55288d",
                    "path": "<XInputController>/rightTrigger",
                    "interactions": "",
                    "processors": "",
                    "groups": "Controller",
                    "action": "CheckXC",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "88ced3a2-d4c9-4242-811f-5fceee39ee02",
                    "path": "<XInputController>/leftStickPress",
                    "interactions": "",
                    "processors": "",
                    "groups": "Controller",
                    "action": "CheckXC",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "4994717c-88f8-4cbf-bf15-e4bf72c2564b",
                    "path": "<XInputController>/rightStickPress",
                    "interactions": "",
                    "processors": "",
                    "groups": "Controller",
                    "action": "CheckXC",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "49d7c9f4-7012-48b2-9ebb-c6d91c8ad519",
                    "path": "<XInputController>/leftStick",
                    "interactions": "",
                    "processors": "",
                    "groups": "Controller",
                    "action": "CheckXC",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "d231cc05-8f11-46ee-8b6e-3f00d1309037",
                    "path": "<XInputController>/rightStick",
                    "interactions": "",
                    "processors": "",
                    "groups": "Controller",
                    "action": "CheckXC",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        },
        {
            "name": "UI",
            "id": "c2d3626b-055f-4be8-a7c7-0acb788185c1",
            "actions": [
                {
                    "name": "Move",
                    "type": "PassThrough",
                    "id": "3e786d1f-cfc8-4e2e-b738-7c738c18296f",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "Click",
                    "type": "Button",
                    "id": "a98c15c1-5bc4-4f40-9ff2-0b51a3a2fba1",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "RoomLobby",
                    "type": "Button",
                    "id": "7f749efd-2cc6-417d-95e8-3588e43d7b94",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "Paused",
                    "type": "Button",
                    "id": "d1f4036f-2fe4-43a8-8a50-a6396e2a1e31",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "8ea427f1-b927-471c-913f-4d09cde509b4",
                    "path": "<XInputController>/leftStick",
                    "interactions": "",
                    "processors": "",
                    "groups": "XboxController",
                    "action": "Move",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "9ecc99fe-10f0-4a6e-9bdb-2fceb39ca089",
                    "path": "<XInputController>/buttonSouth",
                    "interactions": "",
                    "processors": "",
                    "groups": "XboxController",
                    "action": "Click",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "5b65cd62-24d6-44b2-8d09-a6b7568f4537",
                    "path": "<XInputController>/start",
                    "interactions": "",
                    "processors": "",
                    "groups": "XboxController",
                    "action": "Paused",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "91850578-7813-4416-8534-e739da03c254",
                    "path": "<Keyboard>/escape",
                    "interactions": "",
                    "processors": "",
                    "groups": "Keyboard&Mouse",
                    "action": "Paused",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "4d1ea8b6-613a-4d1d-a3fa-ad09fe6491e5",
                    "path": "<Keyboard>/p",
                    "interactions": "",
                    "processors": "",
                    "groups": "Keyboard&Mouse",
                    "action": "Paused",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "4153dfb2-a9ff-4163-ba8f-27aba552752a",
                    "path": "<XInputController>/select",
                    "interactions": "",
                    "processors": "",
                    "groups": "XboxController",
                    "action": "RoomLobby",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "39ec9b4b-9510-47c3-9628-5eef2a4033c8",
                    "path": "<Keyboard>/tab",
                    "interactions": "",
                    "processors": "",
                    "groups": "Keyboard&Mouse",
                    "action": "RoomLobby",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": [
        {
            "name": "Keyboard&Mouse",
            "bindingGroup": "Keyboard&Mouse",
            "devices": [
                {
                    "devicePath": "<Keyboard>",
                    "isOptional": false,
                    "isOR": false
                },
                {
                    "devicePath": "<Mouse>",
                    "isOptional": false,
                    "isOR": false
                }
            ]
        },
        {
            "name": "XboxController",
            "bindingGroup": "XboxController",
            "devices": [
                {
                    "devicePath": "<XInputController>",
                    "isOptional": false,
                    "isOR": false
                }
            ]
        }
    ]
}